--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^9.16.0",
     "eslint-config-next": "15.1.0",
     "prettier": "^3.4.2",
+    "sass": "^1.83.1",
     "typescript": "5.7.2"
   },
   "engines": {
