--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@payloadcms/richtext-lexical": "latest",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
-    "next": "15.1.0",
+    "next": "^15.1.4",
     "payload": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -32,10 +32,13 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "sass": "^1.83.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.7.2"
   },
   "engines": {
